--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <a href="#articles" class="arrow">
             <i class='bx bx-chevrons-down'></i>
             </a>
-
+<!-- 
             <a href="#header" class="arrow-up">
-                <i class='bx bx-chevron-up'></i></a>
+                <i class='bx bx-chevron-up'></i></a> -->
     </div>
 
     <div class="articles" id="articles">
